[tool.poetry]
name = "graphistry-fastapi"
version = "0.1.0"
description = ""
authors = ["Jagadeesh Garapati <jagadeesh.garapati.ext@nokia.com>"]
readme = "README.md"
packages = [{include = "neo4j"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
neo4j = "^5.0.1"
python-dotenv = "^0.21.0"
geocoder = "^1.38.1"
geopy = "^2.2.0"
matplotlib = "3.6.2"
pandas="^1.5.2"
graphistry="^0.28.6"
numpy= "1.24.1"
getenv= "0.2.0"
igraph="0.10.3"
sqlalchemy = "^1.3"
psycopg = "^3.1.8"
pip = "^23.0"
psycopg2-binary= "2.9.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
